# conjectures-arxiv

./: .gitignore  README.md  pyproject.toml
data/exports_month_live_20260303/: real_conjectures_gpt-5-mini.csv
data/exports_month_live_20260306/: conjectures.csv  conjectures.jsonl  real_conjectures_gpt-5-mini.csv  real_conjectures_gpt-5-mini.jsonl
data/exports_month_live_20260316/: conjectures.csv  conjectures.jsonl  real_conjectures_gpt-5-mini.csv  real_conjectures_gpt-5-mini.jsonl
data/exports_month_live_20260405/: conjectures.csv  conjectures.jsonl  real_conjectures_gpt-5-mini.csv  real_conjectures_gpt-5-mini.jsonl
data/exports_month_live_20260412/: conjectures.csv  conjectures.jsonl  real_conjectures_gpt-5-mini.csv  real_conjectures_gpt-5-mini.jsonl
data/exports_month_live_20260419/: conjectures.csv  conjectures.jsonl  real_conjectures_gpt-5-mini.csv  real_conjectures_gpt-5-mini.jsonl
data/exports_solver_status_20260309/: solver_attempts.csv  (+1 more)
formalization/: ConjecturesArxiv.lean  GeneralSGDMomentDisproof.lean  HilbertDepth.lean  HilbertDepthNotes.md  MagnitudeDisproof.lean  MagnitudeDisproofNotes.md  QuasimodularSturm.lean  QuasimodularSturmNotes.md  README.md  SteinDisproof.lean  SteinDisproofNotes.md  XiZeroLimit.lean  XiZeroLimitNotes.md  lake-manifest.json  lakefile.toml
scripts/: plot_real_conjecture_histograms.py
tests/: test_arxiv_client.py  test_cli.py  test_conjecture_extractor.py  test_database.py  test_hf_publish.py  test_license_policy.py  test_llm_filter.py  test_pipeline.py  test_s3_publish.py  test_solver.py  test_source_fetcher.py
(+44 files in other folders)
