[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conjectures-arxiv"
version = "0.1.0"
description = "Scrape recent arXiv math papers for conjecture environments and publish a shared dataset."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "boto3>=1.34.0",
  "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]
parquet = [
  "pyarrow>=16.0.0",
]
huggingface = [
  "huggingface_hub>=0.31.4",
]
llm = [
  "openai>=1.50.0",
]

[project.scripts]
conjectures-arxiv = "conjectures_arxiv.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
